==> ARMmbed/mbed-os/targets/TARGET_Ambiq_Micro/TARGET_Apollo3/device/sleep.c <==
/* mbed Microcontroller Library
 * Copyright (c) 2006-2020 Arm Limited and affiliates.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
#include "sleep_api.h"
#include "am_hal_sysctrl.h"

void hal_sleep(void)
{
  am_hal_sysctrl_sleep(AM_HAL_SYSCTRL_SLEEP_NORMAL);
}

void hal_deepsleep(void)
{
  am_hal_sysctrl_sleep(AM_HAL_SYSCTRL_SLEEP_DEEP);
}
